<resources>
    <string name="app_name">Dota Pulse</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="schedule_title">GAME STARTS</string>
    <string name="league_name">Unknown league</string>

    <string name="game_status_live">LIVE</string>
    <string name="game_status_finished">FINISHED</string>

    <string name="radiant_name">Radiant Team</string>
    <string name="dire_name">Dire Team</string>

    <string name="series_type">bo5</string>

    <string name="player_name">player name</string>
    <string name="level_status">Lvl 0: not picked</string>
    <string name="KDA">K/D/A: 0/0/0</string>

    <string name="score">0 - 0</string>
    <string name="duration">00:00</string>
    <string name="net_worth_adv">Net Worth Advantage: %1s</string>

</resources>
