<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/game_status"
        android:layout_width="match_parent"
        android:layout_height="25dip"
        android:gravity="center"
        android:text="@string/schedule_title"
        android:textColor="@android:color/white"
        android:theme="@style/AppTheme" />
    <View
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:background="#1d1d1d"
        android:layout_gravity="center_vertical|center_horizontal" />

    <RelativeLayout
        android:id="@+id/schedule_panel"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/league_name"
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:layout_marginStart="7dp"
            android:gravity="start"
            android:text="@string/league_name"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:id="@+id/home__team_info_panel"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/radiant_logo"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/away_team_info_panel"
            android:layout_toRightOf="@+id/home__team_info_panel"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="3:2"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/series_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/series_type"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/away_team_info_panel"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dire_logo"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/radiant_team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="2dp"
            android:text="@string/radiant_name"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:maxLines="1"
            android:layout_alignBottom="@+id/home__team_info_panel"
            android:layout_alignRight="@+id/home__team_info_panel"
            />

        <TextView
            android:id="@+id/dire_team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="2dp"
            android:text="@string/dire_name"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_alignBottom="@+id/away_team_info_panel"
            android:layout_alignRight="@+id/away_team_info_panel"
            android:layout_marginRight="12dp"
            />
    </RelativeLayout>

</LinearLayout>