<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">


    <ImageView
            android:id="@+id/hero_log"
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:scaleType="fitXY"
            android:src="@drawable/h_21"
            android:layout_gravity="start"
    />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView
                android:id="@+id/player_name"
                android:layout_width="120dp"
                android:layout_height="25dp"
                android:gravity="start"
                android:layout_marginStart="7dp"
                android:text="@string/player_name"
                android:textSize="17sp"/>
        <TextView
                android:id="@+id/level_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="7dp"
                android:text="@string/level_status"
                android:textSize="12sp"/>
        <TextView
                android:id="@+id/kda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="7dp"
                android:text="@string/KDA"
                android:textSize="12sp"/>


    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:id="@+id/items_first"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <ImageView
                    android:id="@+id/item_1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/i_1"
                    android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp" />
            <ImageView
                    android:id="@+id/item_2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/i_2"
                android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp" />
            <ImageView
                    android:id="@+id/item_3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/i_3"
                    android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="5dp" />

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
        >

            <ImageView
                    android:id="@+id/item_4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/i_4"
                    android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp" />
            <ImageView
                    android:id="@+id/item_5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/i_5"
                    android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp" />
            <ImageView
                    android:id="@+id/item_6"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/i_recipe"
                    android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>